--- a/module/pubspec.yaml
+++ b/module/pubspec.yaml
@@ -5,29 +5,26 @@ description: "A new Flutter project."
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 version: 1.0.0+1
-
 environment:
   sdk: ^3.9.0
 
 dependencies:
   flutter:
     sdk: flutter
-
   json_annotation: ^4.9.0
   flutter_svg: ^2.0.16
   lottie: ^3.1.2
-  envied: ^0.5.4+1
+  envied: ^1.2.1
   equatable: ^2.0.5
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
   flutter_lints: ^4.0.0
   build_runner: ^2.4.12
-  envied_generator: ^0.5.4+1
-  json_serializable: ^6.8.0
-  flutter_gen_runner: ^5.7.0
+  json_serializable: ^6.9.5
+  envied_generator: ^1.2.1
+  flutter_gen_runner: ^5.11.0
 
 flutter_gen:
   output: lib/src/asset/
@@ -35,10 +32,6 @@ flutter_gen:
     lottie: true
     flutter_svg: true
 
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
-
-# The following section is specific to Flutter packages.
 flutter:
   assets:
     - assets/color/
