--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -126,7 +126,6 @@ dev_dependencies:
   very_good_analysis: ^6.0.0
   flutter_launcher_icons: ^0.14.1
   auto_route_generator: ^9.0.0
-  build_runner: ^2.4.6
   device_preview: ^1.1.0
   mockito: ^5.4.2
   bloc_test: ^9.1.4
@@ -136,10 +135,10 @@ flutter_launcher_icons:
   android: "launcher_icon"
   ios: true
   image_path: "asset/app/app_icon.png"
-  min_sdk_android: 21 # android min sdk min:16, default 21
+  min_sdk_android: 21 
   remove_alpha_ios: true
 
 flutter:
   uses-material-design: true
   assets:
-    - asset/translations/ # <-- 'asset' değil 'assets'
+    - asset/translations/ 
